Object contribute to fluid sim animation start earlier than keyframe #29186

Closed
opened 2011-11-07 11:27:09 +01:00 by ganesha adiguna · 11 comments

%%%I tried to animate by inserting keyframe to the inflow option: "Object contribute to fluid sim" checkbox at frame 250. After baking the domain, the inflow start early at frame 243

My system spec:
Official Blender 2.60 r41226
Proc: Core i3 M370 @ 2.4ghz
Memory: 4gb
Vga: Ati Mobility Radeon 5470%%%

%%%I tried to animate by inserting keyframe to the inflow option: "Object contribute to fluid sim" checkbox at frame 250. After baking the domain, the inflow start early at frame 243 My system spec: Official Blender 2.60 r41226 Proc: Core i3 M370 @ 2.4ghz Memory: 4gb Vga: Ati Mobility Radeon 5470%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I confirm the problem with your .blend.

But I can't reproduce it with a .blend from scratch.%%%

%%%I confirm the problem with your .blend. But I can't reproduce it with a .blend from scratch.%%%

%%%I do have the same Problem with blender 2.6. r41226
The amount of frames, wich the simulation starts to early, differs. It often changes after recalculation. From what i have seen so far, between 3 to 13 frames.
My system:
ATI Radeon HD5570
Intel Core i5-2300 2,8GHz
4gb Ram%%%

%%%I do have the same Problem with blender 2.6. r41226 The amount of frames, wich the simulation starts to early, differs. It often changes after recalculation. From what i have seen so far, between 3 to 13 frames. My system: ATI Radeon HD5570 Intel Core i5-2300 2,8GHz 4gb Ram%%%

%%%Assigning to Daniel Genrich, our Fluid module owner. :) %%%

%%%Assigning to Daniel Genrich, our Fluid module owner. :) %%%

%%%Any updates here? %%%

%%%Any updates here? %%%
Member

%%%This is really weird.
I backtraced that the fluid start at "fluid time" 2.0 (50% of 4 seconds) which should equal frame 250 (50% of 500 frames) but it does end up activating on frame 246/247.

Interesting files:
a) solver_init.cpp line 1450
b) physics_fluid.c line 468

Still have no clue what's going on.%%%

%%%This is really weird. I backtraced that the fluid start at "fluid time" 2.0 (50% of 4 seconds) which should equal frame 250 (50% of 500 frames) but it does end up activating on frame 246/247. Interesting files: a) solver_init.cpp line 1450 b) physics_fluid.c line 468 Still have no clue what's going on.%%%
Member

%%%UPDATE:
Seems like frametimes are different from elbeem and blender side.

Elbeem is advancing more "simtime" per frame than blender is with the animated channels.
This means basicly:
We export a "start inflow on frame 250" which is translated by blender into a elbeem time of 2.0 (with 500 frames total and 4 seconds sim).
But within elbeem, the simulation is advanced by a "timestep" per frame (see mSimulationTime, ntl_world.cpp line 409), which is higher than the increasement of 0.008 (the number of this actual case).

Even after one frame, the difference is already visible:
Elbeem Blender
targetTime: 0.008000, frame: 0 targetTime: 0.008000, frame: 0
targetTime: 0.016159, frame: 1 targetTime: 0.016000, frame: 1
targetTime: 0.024319, frame: 2 targetTime: 0.024000, frame: 2

mSimulationTime%%%

%%%UPDATE: Seems like frametimes are different from elbeem and blender side. Elbeem is advancing more "simtime" per frame than blender is with the animated channels. This means basicly: We export a "start inflow on frame 250" which is translated by blender into a elbeem time of 2.0 (with 500 frames total and 4 seconds sim). But within elbeem, the simulation is advanced by a "timestep" per frame (see mSimulationTime, ntl_world.cpp line 409), which is higher than the increasement of 0.008 (the number of this actual case). Even after one frame, the difference is already visible: Elbeem Blender targetTime: 0.008000, frame: 0 targetTime: 0.008000, frame: 0 targetTime: 0.016159, frame: 1 targetTime: 0.016000, frame: 1 targetTime: 0.024319, frame: 2 targetTime: 0.024000, frame: 2 mSimulationTime%%%
Member

%%%Found a fix, still testing for sideeffects (and still 1 frame difference in loading the actuall fluidsim)%%%

%%%Found a fix, still testing for sideeffects (and still 1 frame difference in loading the actuall fluidsim)%%%
Member

%%%Better late than never :)

Should be fixed in r52501.

Thank you for reporting and for your patience!%%%

%%%Better late than never :) Should be fixed in r52501. Thank you for reporting and for your patience!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Very cool! Thank you so much for the fix :)%%%

%%%Very cool! Thank you so much for the fix :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29186
No description provided.